tests/errors/meta-quote-planned.ari
fn main() -> i64 {
  let quoted = ~!(fn ~(name)(~(args)) -> i64 {
    return ~(body);
  });
  return 0;
}
